# NonWorkedCLI

./: CMakeLists.txt  conf.conf
include/: ConfigParser.hpp  DataStorage.hpp  DataWorker.hpp  Filter.hpp  LogLine.hpp  LogMaker.hpp  Query.hpp  Utils.hpp  main.hpp
src/: ConfigParser.cpp  DataStorage.cpp  DataWorker.cpp  Filter.cpp  LogLine.cpp  LogMaker.cpp  Query.cpp  Utils.cpp  main.cpp
